Added a piece icon to the bucket
Performance improvements: don't construct water glasses unless visible
# 0.00.34 (61278) Feb 13, 2012
# 0.00.33 (61275) Feb 13, 2012
Fixed: if a slice is moving toward the pie when the user presses "down" on the numerator, it should turn around and head back to the bucket
Changed from IntClientProperty back to IntegerProperty
Fixed a bug in PieSet.toContainerState
Generalized interfaces to SettableProperty and IntClientProperty
Switched to immutable model with public property interface
When changing the numerator, move pieces from the bucket to the pies
Fixed: When animating to bucket, pieces should rotate up and have their tip go to the tip location
Fixed: When animating to bucket, pieces should have their tip go to the tip location
Fixed: Exception when dragging a piece that animated to the bucket.
Animate pieces to the bucket
Fixed: Pieces don't drag the right amount when the screen is scaled
Fixed: Pieces should be pointing up in bucket so they are in alignment with nearest target cells
Randomize the location of slices in the bucket
Fixed: Get rid of pie slice line
Fixed bucket location
Added Lombok for data classes
Added pie model and view to main sim
Require pieces to intersect with cells before they are dropped
Fixed: when dragged, piece should not be contained by a cell
Added detection of cells
Removed "click to toggle" cell feature
In the icon, change the number line to go from "0 to 1" with no tick marks in between to give a consistent view of "the whole"
Fixed: The number of pieces in the bucket should be equal to the max numerator value - number in the slices
Fixed: Adding values with the bucket should change the spinner
Hide the bucket for number line
Fixed: Pieces should be the right size or jump to right size when dragged out of bucket
Added buckets
# 0.00.32 (61123) Feb 8, 2012